@@ -11,6 +11,12 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-00-08
+2011-04-26 Andrei Salnikov
+- modified acqiris.DataDescV1Elem so that waveform() method returns 
+  real poinyter to the beginning of the waveform data taking into 
+  account indexFirstPoint() offset.
+
 Tag: V00-00-07
 2011-04-07 Andrei Salnikov
 - added comments everywhere to generate docs for psana classes
